cc_library(
    name = "type",
    srcs = [
        "function.cpp",
        "interface.cpp",
        "opaque.cpp",
        "struct.cpp",
        "type.cpp",
        "unresolved.cpp",
    ],
    hdrs = [
        "all.hpp",
        "function.hpp",
        "interface.hpp",
        "opaque.hpp",
        "struct.hpp",
        "type.hpp",
        "unresolved.hpp",
    ],
    visibility = [
        "//cirrus:__subpackages__",
    ],
    deps = [
        "//cirrus/ast:node",
        "//cirrus/util",
    ],
)
