cc_library(
    name = "expr",
    srcs = [
        "binary_operator.cpp",
        "block.cpp",
        "boolean.cpp",
        "call.cpp",
        "exec.cpp",
        "export.cpp",
        "expression.cpp",
        "float.cpp",
        "function.cpp",
        "identifier.cpp",
        "if.cpp",
        "integer.cpp",
        "let.cpp",
        "member.cpp",
        "parenthesis.cpp",
        "return.cpp",
        "statement.cpp",
        "type_declaration.cpp",
    ],
    hdrs = [
        "all.hpp",
        "binary_operator.hpp",
        "block.hpp",
        "boolean.hpp",
        "call.hpp",
        "exec.hpp",
        "export.hpp",
        "expression.hpp",
        "float.hpp",
        "function.hpp",
        "identifier.hpp",
        "if.hpp",
        "integer.hpp",
        "let.hpp",
        "member.hpp",
        "parenthesis.hpp",
        "return.hpp",
        "statement.hpp",
        "type_declaration.hpp",
    ],
    visibility = [
        "//rain:__subpackages__",
    ],
    deps = [
        "//rain/ast/type",
        "//rain/lang:location",
        "//rain/util",
    ],
)
