cc_library(
    name = "ast",
    srcs = [
        "module.cpp",
    ],
    hdrs = [
        "module.hpp",
    ],
    visibility = [
        "//rain:__subpackages__",
    ],
    deps = [
        "//rain/lang/ast/expr",
        "//rain/lang/ast/scope",
        "//rain/lang/ast/type",
        "//rain/lang/ast/var",
    ],
)

cc_library(
    name = "hdrs",
    hdrs = [
        "module.hpp",
    ],
    visibility = [
        "//rain:__subpackages__",
    ],
    deps = [
        "//rain/lang/ast/expr:hdrs",
        "//rain/lang/ast/scope:hdrs",
        "//rain/lang/ast/type:hdrs",
        "//rain/lang/ast/var:hdrs",
    ],
)
