cc_library(
    name = "code",
    srcs = [
        "compile/all.hpp",
        "compile/any.cpp",
        "compile/binary_operator.cpp",
        "compile/block.cpp",
        "compile/call.cpp",
        "compile/compile_time.cpp",
        "compile/export.cpp",
        "compile/extern.cpp",
        "compile/float.cpp",
        "compile/function.cpp",
        "compile/function_declaration.cpp",
        "compile/identifier.cpp",
        "compile/if.cpp",
        "compile/integer.cpp",
        "compile/let.cpp",
        "compile/member.cpp",
        "compile/module.cpp",
        "compile/parenthesis.cpp",
        "compile/struct_literal.cpp",
        "compile/type.cpp",
        "compile/unary_operator.cpp",
        "compile/while.cpp",
        "context.cpp",
        "module.cpp",
    ],
    hdrs = [
        "context.hpp",
        "module.hpp",
    ],
    visibility = [
        "//rain:__subpackages__",
    ],
    deps = [
        "//rain/lang/ast",
        "//rain/lang/code/target:wasm",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@llvm-project//llvm:CodeGen",
        "@llvm-project//llvm:ExecutionEngine",
        "@llvm-project//llvm:Interpreter",
        "@llvm-project//llvm:MC",
        "@llvm-project//llvm:common_transforms",
    ],
)
