cc_library(
    name = "err",
    srcs = [
        "binary_operator.cpp",
        "syntax.cpp",
        "unary_operator.cpp",
    ],
    hdrs = [
        "all.hpp",
        "binary_operator.hpp",
        "simple.hpp",
        "syntax.hpp",
        "unary_operator.hpp",
    ],
    visibility = [
        "//rain:__subpackages__",
    ],
    deps = [
        "//rain/lang/lex",
        "//rain/util",
        "@abseil-cpp//absl/strings",
    ],
)
