cc_library(
    name = "err",
    srcs = [
        "binary_operator.cpp",
        "multiple_definition.cpp",
        "return_type_mismatch.cpp",
        "syntax.cpp",
        "unary_operator.cpp",
        "underline.cpp",
    ],
    hdrs = [
        "all.hpp",
        "binary_operator.hpp",
        "multiple_definition.hpp",
        "return_type_mismatch.hpp",
        "simple.hpp",
        "syntax.hpp",
        "unary_operator.hpp",
        "underline.hpp",
    ],
    visibility = [
        "//rain:__subpackages__",
    ],
    deps = [
        "//rain/lang/lex",
        "//rain/util",
        "@abseil-cpp//absl/strings",
    ],
)
