cc_library(
    name = "lex",
    srcs = [
        "lazy_lexer.cpp",
        "tokenize.cpp",
    ],
    hdrs = [
        "lazy_lexer.hpp",
        "lazy_list_lexer.hpp",
        "lexer.hpp",
        "list_lexer.hpp",
        "location.hpp",
        "state.hpp",
        "token.hpp",
        "tokenize.hpp",
    ],
    visibility = [
        "//rain:__subpackages__",
    ],
    deps = [
        "//rain/util",
    ],
)

cc_test(
    name = "test",
    size = "small",
    timeout = "short",
    srcs = [
        "location.test.cpp",
    ],
    deps = [
        ":lex",
        "@googletest//:gtest_main",
    ],
)
