cc_library(
    name = "lex",
    srcs = [
        "lazy.cpp",
        "tokenize.cpp",
    ],
    hdrs = [
        "lazy.hpp",
        "lazy_list.hpp",
        "lexer.hpp",
        "list.hpp",
        "location.hpp",
        "state.hpp",
        "token.hpp",
        "tokenize.hpp",
    ],
    visibility = [
        "//rain:__subpackages__",
    ],
    deps = [
        "//rain/util",
    ],
)

cc_test(
    name = "test",
    size = "small",
    timeout = "short",
    srcs = [
        "location.test.cpp",
    ],
    deps = [
        ":lex",
        "@googletest//:gtest_main",
    ],
)
