cc_library(
    name = "parse",
    srcs = [
        "any.cpp",
        "atom.cpp",
        "binary_operator.cpp",
        "block.cpp",
        "call.cpp",
        "function.cpp",
        "identifier.cpp",
        "integer.cpp",
        "list.hpp",
        "member.cpp",
        "module.cpp",
        "struct.cpp",
    ],
    hdrs = [
        "all.hpp",
    ],
    visibility = [
        "//rain:__subpackages__",
    ],
    deps = [
        "//rain/lang/ast",
        "//rain/lang/lex",
        "//rain/util",
        "@abseil-cpp//absl/strings",
    ],
)
