cc_library(
    name = "parse",
    srcs = [
        "any.cpp",
        "atom.cpp",
        "binary_operator.cpp",
        "block.cpp",
        "call.cpp",
        "compile_time.cpp",
        "float.cpp",
        "function.cpp",
        "identifier.cpp",
        "if.cpp",
        "integer.cpp",
        "let.cpp",
        "list.hpp",
        "member.cpp",
        "module.cpp",
        "parenthesis.cpp",
        "struct.cpp",
        "unary_operator.cpp",
        "while.cpp",
    ],
    hdrs = [
        "all.hpp",
    ],
    visibility = [
        "//rain:__subpackages__",
    ],
    deps = [
        "//rain/lang/ast",
        "//rain/lang/lex",
        "//rain/util",
        "@abseil-cpp//absl/strings",
    ],
)
