cc_library(
    name = "parse",
    srcs = [
        "any.cpp",
        "atom.cpp",
        "binary_operator.cpp",
        "block.cpp",
        "call.cpp",
        "compile_time.cpp",
        "extern.cpp",
        "float.cpp",
        "function.cpp",
        "function_declaration.cpp",
        "identifier.cpp",
        "if.cpp",
        "integer.cpp",
        "let.cpp",
        "list.hpp",
        "member.cpp",
        "module.cpp",
        "parenthesis.cpp",
        "struct_literal.cpp",
        "type/array.cpp",
        "type/struct.cpp",
        "unary_operator.cpp",
        "util/int_value.hpp",
        "while.cpp",
    ],
    hdrs = [
        "all.hpp",
    ],
    visibility = [
        "//rain:__subpackages__",
    ],
    deps = [
        "//rain/lang/ast",
        "//rain/lang/lex",
        "//rain/util",
        "@abseil-cpp//absl/strings",
    ],
)
