cc_library(
    name = "serial",
    srcs = [
        "builder.cpp",
        "module.cpp",
    ],
    hdrs = [
        "builder.hpp",
        "expression.hpp",
        "header.hpp",
        "header_v0.hpp",
        "kind.hpp",
        "module.hpp",
        "type.hpp",
        "variable.hpp",
    ],
    visibility = [
        "//rain:__subpackages__",
    ],
    deps = [
        "//rain/crypto",
        "//rain/lang/err",
        "//rain/util",
    ],
)

cc_test(
    name = "test",
    srcs = ["module.test.cpp"],
    deps = [
        ":serial",
        "@googletest//:gtest_main",
    ],
)
