cc_test(
    name = "spec",
    size = "small",
    timeout = "short",
    srcs = [
        "lexer.spec.cpp",
        "rain.spec.cpp",
    ],
    deps = [
        "//rain/lang/ast",
        "//rain/lang/code",
        "//rain/lang/lex",
        "//rain/lang/parse",
        "@googletest//:gtest_main",
    ],
)
