cc_library(
    name = "expr",
    srcs = [
        "binary_operator.cpp",
        "block.cpp",
        "boolean.cpp",
        "call.cpp",
        "compile_time.cpp",
        "export.cpp",
        "expression.cpp",
        "float.cpp",
        "function.cpp",
        "identifier.cpp",
        "if.cpp",
        "integer.cpp",
        "member.cpp",
        "method.cpp",
        "module.cpp",
        "parenthesis.cpp",
        "type.cpp",
        "unary_operator.cpp",
    ],
    visibility = [
        "//rain:__subpackages__",
    ],
    deps = [
        "//rain/lang/ast:hdrs",
        "//rain/lang/err",
        "//rain/lang/serial",
        "//rain/util",
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@llvm-project//llvm:Core",
        "@llvm-project//llvm:Support",
    ],
)

cc_library(
    name = "hdrs",
    hdrs = [
        "binary_operator.hpp",
        "block.hpp",
        "boolean.hpp",
        "call.hpp",
        "compile_time.hpp",
        "export.hpp",
        "expression.hpp",
        "float.hpp",
        "function.hpp",
        "identifier.hpp",
        "if.hpp",
        "integer.hpp",
        "member.hpp",
        "method.hpp",
        "module.hpp",
        "parenthesis.hpp",
        "type.hpp",
        "unary_operator.hpp",
    ],
    visibility = [
        "//rain:__subpackages__",
    ],
    deps = [
        "//rain/lang/err",
        "//rain/lang/serial",
        "//rain/util",
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@llvm-project//llvm:Core",
        "@llvm-project//llvm:Support",
    ],
)
