cc_library(
    name = "expr",
    srcs = [
        "array_literal.cpp",
        "binary_operator.cpp",
        "block.cpp",
        "boolean.cpp",
        "call.cpp",
        "cast.cpp",
        "compile_time.cpp",
        "export.cpp",
        "expression.cpp",
        "extern.cpp",
        "float.cpp",
        "function.cpp",
        "function_declaration.cpp",
        "identifier.cpp",
        "if.cpp",
        "integer.cpp",
        "interface_implementation.cpp",
        "let.cpp",
        "member.cpp",
        "null.cpp",
        "parenthesis.cpp",
        "slice_literal.cpp",
        "string.cpp",
        "struct_literal.cpp",
        "type.cpp",
        "unary_operator.cpp",
        "while.cpp",
    ],
    visibility = [
        "//rain:__subpackages__",
    ],
    deps = [
        "//rain/lang/ast:hdrs",
        "//rain/lang/err",
        "//rain/lang/serial",
        "//rain/util",
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@llvm-project//llvm:Core",
        "@llvm-project//llvm:Support",
    ],
)

cc_library(
    name = "hdrs",
    hdrs = [
        "array_literal.hpp",
        "binary_operator.hpp",
        "block.hpp",
        "boolean.hpp",
        "call.hpp",
        "cast.hpp",
        "compile_time.hpp",
        "export.hpp",
        "expression.hpp",
        "extern.hpp",
        "float.hpp",
        "function.hpp",
        "function_declaration.hpp",
        "identifier.hpp",
        "if.hpp",
        "integer.hpp",
        "interface_implementation.hpp",
        "let.hpp",
        "member.hpp",
        "null.hpp",
        "parenthesis.hpp",
        "slice_literal.hpp",
        "string.hpp",
        "struct_literal.hpp",
        "type.hpp",
        "unary_operator.hpp",
        "while.hpp",
    ],
    visibility = [
        "//rain:__subpackages__",
    ],
    deps = [
        "//rain/lang:options",
        "//rain/lang/err",
        "//rain/lang/serial",
        "//rain/util",
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@llvm-project//llvm:Core",
        "@llvm-project//llvm:Support",
    ],
)
