cc_library(
    name = "scope",
    srcs = [
        "block.cpp",
        "builtin.cpp",
        "module.cpp",
        "scope.cpp",
    ],
    textual_hdrs = [
        "builtin_methods.inl",
    ],
    visibility = [
        "//rain:__subpackages__",
    ],
    deps = [
        "//rain/lang/ast:hdrs",
        "//rain/lang/code:context",
        "//rain/lang/err",
        "//rain/lang/serial",
        "//rain/util",
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@llvm-project//llvm:Core",
        "@llvm-project//llvm:Support",
    ],
)

cc_library(
    name = "hdrs",
    hdrs = [
        "block.hpp",
        "builtin.hpp",
        "module.hpp",
        "scope.hpp",
    ],
    visibility = [
        "//rain:__subpackages__",
    ],
    deps = [
        "//rain/lang/err",
        "//rain/lang/serial",
        "//rain/util",
        "@abseil-cpp//absl/base:nullability",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@llvm-project//llvm:Core",
        "@llvm-project//llvm:Support",
    ],
)
