cc_library(
    name = "expr",
    srcs = [
        "any.cpp",
        "array_or_struct_literal.cpp",
        "atom.cpp",
        "binary_operator.cpp",
        "block.cpp",
        "call.cpp",
        "compile_time.cpp",
        "extern.cpp",
        "float.cpp",
        "function.cpp",
        "function_declaration.cpp",
        "identifier.cpp",
        "if.cpp",
        "integer.cpp",
        "let.cpp",
        "list.hpp",
        "member.cpp",
        "parenthesis.cpp",
        "unary_operator.cpp",
        "while.cpp",
    ],
    visibility = [
        "//rain:__subpackages__",
    ],
    deps = [
        "//rain/lang/ast",
        "//rain/lang/lex",
        "//rain/lang/parse/util",
        "//rain/util",
        "@abseil-cpp//absl/strings",
    ],
)
